<resources>
    <string name="app_name">Xenon Store</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="clear_data">Clear Data</string>
    <string name="download_completed">Download completed</string>
    <string name="download_failed">Download failed</string>
    <string name="permission_denied_cannot_download_the_file">Permission denied. Cannot download the file.</string>
    <string name="update">Update</string>
    <string name="install">Install</string>
    <string name="open">Open</string>
    <string name="action_share">Share</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data_dialog">Are you sure you want to clear all app data?</string>
    <string name="prerelease">Search Pre-Releases</string>
    <string name="amoled">Amoled-Darkmode</string>
    <string name="about">About</string>
    <string name="about_text">Version: %1$s</string>
    <string name="version_with_prefix">v.%1$s</string>
    <string name="offline_message">You are offline at the moment</string>
    <string name="open_settings">Open Settings</string>
    <string name="failed_to_find">Failed to find %1$s</string>
    <string name="response_error_code">Response %1$s for</string>
    <string name="permission_denied">Install permission denied</string>
    <string name="permission_granted">Install permission granted</string>
    <string name="no_assets">No assets found for</string>
    <string name="empty_body">Empty response body for</string>
    <string name="no_data">No Data for</string>
    <string name="delete">Uninstall</string>
    <string name="error_outdated">Encountered parsing error, Please update the Store</string>
</resources>