<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surfaceContainerLowest">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/border_margin"
        android:background="@drawable/tile_cutout"
        android:clipToOutline="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:backgroundTint="@android:color/transparent"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            tools:ignore="MissingConstraints">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="left"
                app:collapsedTitleTextAppearance="@style/ActionBar.XenonCollapsedTitleStyle"
                app:collapsedTitleTextColor="@color/textOnPrimary"
                app:expandedTitleGravity="center|center"
                app:expandedTitleTextAppearance="@style/ActionBar.XenonExpanedTitleStyle"
                app:expandedTitleTextColor="@color/primary"
                app:layout_constraintVertical_weight="100"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="@string/settings"
                app:titleCollapseMode="scale"
                app:titleEnabled="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_left_vector"
                    app:navigationIconTint="@color/onSurface"
                    app:buttonGravity="bottom"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tile_background_100"
            android:backgroundTint="@color/surfaceContainer"
            android:clipToOutline="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:textAlignment="center" />


                <LinearLayout
                    android:id="@+id/language_selection_holder"
                    style="@style/SettingsTile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsSelectionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/language" />

                    <TextView
                        android:id="@+id/language_selection_value"
                        style="@style/SettingsSelectionValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="English"
                        tools:ignore="HardcodedText,TextContrastCheck" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/theme_selection_holder"
                    style="@style/SettingsTile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsSelectionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/theme" />

                    <TextView
                        android:id="@+id/theme_selection_value"
                        style="@style/SettingsSelectionValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="System"
                        tools:ignore="HardcodedText,TextContrastCheck" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/clear_button_holder"
                    style="@style/SettingsTile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsSelectionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_data" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>